# MaxVideoRenderer

./: .gitmodules  CMakeLists.txt  INSTALL.readme  ambilight.service  config.json  gst_hacks.py  iod.conf  iod.py  iodclient.py  lights-off.py  lights.py  lightserver.py  maxiod.conf  maxiod.py  maxrenderer.py  olaclient.py  opencvfilter.py  screensaver.py  start-v4l2.sh  testlightserver.py  testplayer.py  v4l2player.py  videocolor.py  videoplayer.py
